Fix drop-down visibility

--- a/assets/css/backend.less
+++ b/assets/css/backend.less
@@ -13,7 +13,7 @@
 				vertical-align: middle;
 				color: #888;
 				position: relative;
-				z-index: 2;
+				z-index: 3;
 
 				&:focus {
 					box-shadow: none;
@@ -36,6 +36,7 @@ Mapbox
 		max-width: none !important;
 		box-shadow: none !important;
 		min-width: auto !important;
+		z-index: 2 !important;
 		display: inline-block;
 
 		.suggestions-wrapper {
