--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -19,7 +19,7 @@
 				justify-content: center;
 				align-items: center;
 				position: relative;
-				z-index: 1;
+				z-index: 3;
 			}
 		}
 	}
@@ -62,6 +62,7 @@ Mapbox
 		max-width: none !important;
 		box-shadow: none !important;
 		min-width: auto !important;
+		z-index: 2 !important;
 
 		.suggestions-wrapper {
 			li {
